--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="text-right">
               <button type="submit" class="global-button"> send </button>
             </div>
-            <input type="hidden" name="_next" value="raamish.github.io" />
+            <input type="hidden" name="_next" value="#" />
           </form>
         </div>
       </section>
