--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <label for="message"> your message </label>
             </div>
             <div class="text-right">
-              <button type="submit" class="global-button"> send </button>
+              <button type="submit" value="Send" class="global-button"> send </button>
             </div>
             <input type="hidden" name="_next" value="#" />
           </form>
