--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
           <h4 class="filters__title"> <i class="fa fa-tags"></i> </h4>
           <ul class="filters__list">
             <li class="filters__label is-active"> all </li>
-            <li class="filters__label" data-cat="fcc"> Official Work</li>
-            <li class="filters__label" data-cat="personal"> Personal Projects </li>
+            <li class="filters__label" data-cat="fcc"> free code camp </li>
+            <li class="filters__label" data-cat="personal"> personal projects </li>
           </ul>
         </div>
         
         <div class="portfolio__project-wrapper row">
         
           <div class="portfolio__project col-xs-12 col-sm-6 col-lg-4 text-center" data-cat="fcc">
-            <a href="http://codepen.io/eevu/full/BoGMJm/" target="_blank" title="view live">
+            <a href="#" target="_blank" title="view live">
               <div class="portfolio__project__preview">
                 <img src="images/quotes.svg" alt="random quotes"> 
               </div>
               <div class="portfolio__project__description">
                 <div class="info-wrapper">
                   <h3 class="portfolio__project__name">Random Quotes</h3>
-                  <p class="portfolio__project__category"> #free code camp</p>
+                  <p class="portfolio__project__category"> #placeholder</p>
                 </div>
               </div>
             </a>
@@ -83,8 +83,8 @@
               </div>
               <div class="portfolio__project__description">
                 <div class="info-wrapper">
-                  <h3 class="portfolio__project__name">JavaScript Calculator</h3>
-                  <p class="portfolio__project__category"> #free code camp</p>
+                  <h3 class="portfolio__project__name">Calculator</h3>
+                  <p class="portfolio__project__category"> #placeholder</p>
                 </div>
               </div>
             </a>
@@ -98,7 +98,7 @@
               <div class="portfolio__project__description">
                 <div class="info-wrapper">
                   <h3 class="portfolio__project__name">Text Editor</h3>
-                  <p class="portfolio__project__category">#personal project</p>
+                  <p class="portfolio__project__category">#placeholder</p>
                 </div>
               </div>
             </a>
@@ -172,7 +172,7 @@
             <div class="text-right">
               <button type="submit" value="Send" class="global-button"> send </button>
             </div>
-            <input type="hidden" name="_next" value="#" />
+            <input type="hidden" name="_next" value="raamish.github.io" />
           </form>
         </div>
       </section>
