--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       
       <section id="credit" class="row">
         <p>
-          Made with &#10085; by Raamish Malik &copy;2017: Design - <a href="www.codepen.io">CodePen.io</a>
+          Made with &#10085; by Raamish Malik &copy;2017: Design - <a href="https://www.codepen.io">CodePen.io</a>
         </p>
       </section>
     </footer>
