--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
           
           <div class="portfolio__project col-xs-12 col-sm-6 col-lg-4" data-cat="personal">
-            <a href="#" target="_blank" title="what's a becteriophage?">
+            <a href="#" target="_blank" title="coming soon">
               <div class="portfolio__project__preview">
                 <img src="images/bacteriophage.svg" alt="random placeholder">
               </div>
