--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
         <div class="wrapper">
           <p class="about__intro">
             Hi, I'm Raamish Malik and I am currently in the third year of my B.Tech degree in Computer Science from Manipal Institute of Technology, India <br>
-            I have a knack for everything the internet touches and I usually foray into Web Development, FOSS and Deep Learning.<br>
+            I have a knack for everything the internet touches and I usually foray into Web Development, Android and Machine Learning.<br>
             If you have something of similar interests, feel free to contact me!
           </p>
           <a href="#portfolio" class="global-button rotated scroll"> see my work </a>
+          <a></a>
+          <a href="assets/resume/resume.pdf" class="global-button ">   Resume </a>
         </div>
       </section>
       
