--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
       <ul class="header__social-btns">
-        <li> <a class="fa fa-facebook" href="https://www.facebook.com/raamish.malik"></a> </li>
+        <li> <a class="fa fa-linkedin" href="https://in.linkedin.com/in/raamish"></a> </li>
         <li> <a class="fa fa-github" href="https://github.com/raamish" target="_blank" ></a> </li>
       </ul>
     </header>
