--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
           <a href="#portfolio" class="global-button rotated scroll"> see my work </a>
           <a></a>
-          <a href="assets/resume/resume.pdf" class="global-button ">   Resume </a>
+          <a href="assets/resume.pdf" class="global-button ">   Resume </a>
         </div>
       </section>
       
